--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 
-#  Build your Docker image
+#  Build the Docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west2-docker.pkg.dev/vision-hub-442623/vision-hub-docker-repo/vision-hub-flask-app:$SHORT_SHA', '.']
 
@@ -11,7 +11,6 @@ steps:
 #  Deploy to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
-  timeout: 240s
   args:
     - 'run'
     - 'deploy'
@@ -23,6 +22,3 @@ steps:
     - '--platform'
     - 'managed'
     - '--allow-unauthenticated'
-
-substitutions:
-  _REGION: europe-west2
